--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,19 +19,28 @@ repos:
     hooks:
       - id: flake8
         name: flake8
-        entry: flake8 mvnet --indent-size=2 --select=F,E112,E113,E203,E304,E502,E702,E703,E71,E72,E731,W191,W6 --statistics -j4
+        entry: flake8 mvnet/ --indent-size=2 --select=F,E112,E113,E203,E304,E502,E702,E703,E71,E72,E731,W191,W6 --statistics -j4
         language: system
         always_run: true
         pass_filenames: false
+
       - id: mypy
         name: mypy
-        entry: mypy mvnet --ignore-missing-imports --explicit-package-bases
+        entry: mypy mvnet/ --ignore-missing-imports --explicit-package-bases
         language: system
         always_run: true
         pass_filenames: false
+
       - id: pylint
         name: pylint
-        entry: pylint --recursive=true mvnet
+        entry: pylint --recursive=true mvnet/
+        language: system
+        always_run: true
+        pass_filenames: false
+
+      - id: pytest
+        name: pytest
+        entry: pytest test/
         language: system
         always_run: true
         pass_filenames: false
