fix pyopencl mempool allocate

--- a/.gitignore
+++ b/.gitignore
@@ -95,7 +95,6 @@ ENV/
 
 # Customize
 examples/mnist/data/*
-examples/nn_paint/data/*
-examples/binary_classification/data/*
 examples/mnist/compare_tf.py
+examples/test.py
 *.png
